Require session create type enum
